# ffr-rust

./: .gitignore  .luacheckrc  Cargo.toml  Makefile  README.md  _typos.toml  biome.json  flake.nix
.github/workflows/: lua.yml  panvimdoc.yml  release.yml  rust.yml  stylua.yml
crates/ffr-c/: Cargo.toml  cbindgen.toml
crates/ffr-c/include/: ffr.h
crates/ffr-c/src/: lib.rs
crates/ffr-core/: Cargo.toml
crates/ffr-core/benches/: classify_bench.rs  line_index_bench.rs  read_bench.rs
crates/ffr-core/src/: cache.rs  classify.rs  db.rs  decode.rs  errors.rs  index.rs  lib.rs  lines.rs  log.rs  prefetch.rs  read.rs  shared.rs  stat.rs  ts_outline.rs  types.rs  watcher.rs
crates/ffr-core/src/specialized/: archive.rs  image.rs  mod.rs  pdf.rs
crates/ffr-mcp/: Cargo.toml
crates/ffr-mcp/src/: cursor.rs  log.rs  main.rs  outline.rs  protocol.rs  server.rs  update_check.rs
crates/ffr-nvim/: Cargo.toml  build.rs
crates/ffr-nvim/src/: lib.rs
doc/: ffr.txt
lua/ffr/: a11y.lua  buffer.lua  cache.lua  client.lua  commands.lua  config.lua  config_validation.lua  download.lua  health.lua  highlights.lua  init.lua  keymaps.lua  lifecycle.lua  policy.lua  render.lua  semantic.lua  session.lua  statusline.lua  types.lua
lua/ffr/handlers/: archive.lua  image.lua  pdf.lua
lua/ffr/rust/: init.lua
lua/ffr/utils/: fs.lua  system.lua  version.lua
plugin/: ffr.lua
scripts/: determine-version.lua  release.sh  token_savings_report.py
tests/lua/: ffr_spec.lua  minimal_init.lua
tests/native/: integration_test.rs
